The fields of log moved from static final int to java enum
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@78969 523d945c-050c-4681-91ec-863ad3bb968a